// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeftNavBuilder buildAssessmentTestLinks should build links for assessments 1`] = `
<TestViewLeftNavLink
  link={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": -1,
      "key": "Issues",
      "name": "some title",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "status": -2,
      "title": "-1 of 2 some title [object Object] test",
      "url": "",
    }
  }
  renderIcon={[Function]}
/>
`;

exports[`LeftNavBuilder buildAssessmentTestLinks should build links for assessments 2`] = `
<TestViewLeftNavLink
  link={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": 0,
      "key": "Issues",
      "name": "some title",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "status": -2,
      "title": "0 of 2 some title [object Object] test",
      "url": "",
    }
  }
  renderIcon={[Function]}
/>
`;

exports[`LeftNavBuilder buildOverviewLink should build overview link 1`] = `
<OverviewLeftNavLink
  link={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": -1,
      "key": "Overview",
      "name": "Overview",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "percentComplete": 75,
      "title": "Overview 75% Completed",
      "url": "",
    }
  }
  renderIcon={[Function]}
/>
`;

exports[`LeftNavBuilder buildVisualizationConfigurationLink should build link using configuration 1`] = `
<TestViewLeftNavLink
  link={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": -1,
      "key": "Issues",
      "name": "some title",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "url": "",
    }
  }
  renderIcon={[Function]}
/>
`;
